--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng build && DEBUG=angular5-express-app:* && node ./server/bin/www",
     "ngstart": "ng serve",
+    "estart": "node ./server/bin/www",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
